# Sanctuary_TakeHome

./: .gitignore  CMakeLists.txt  README.md  Result.txt  hello
include/Sanctuary/: ForwardKinematics.h  GradientDescentIK.h  GradientDescentIKElbowUp.h  InverseKinematics.h  LevenbergMarquardtIK.h  QuadraticProgrammingIK.h  RRRManipulator.h  computeJacobian.h
src/: ForwardKinematics.cpp  GradientDescentIK.cpp  GradientDescentIKElbowUp.cpp  InverseKinematics.cpp  Jacobian.cpp  LevenbergMarquardtIK.cpp  QuadraticProgrammingIK.cpp  QuadraticProgrammingIK.h  RRRManipulator.cpp  main  main.cpp
tests/: test_forward_kinematics.cpp  test_ik_fk_integration.cpp  test_inverse_kinematics.cpp
